# ai-mini-service

./: .env-example  .gitignore  README.md  app.py  design.md  pyproject.toml
agents/: __init__.py  decorators.py  exceptions.py  models.py  nodes.py  prompts.py  services.py  workflow.py
prompts/: competitor_profiler_system.txt  domain_knowledge_system.txt  final_review_system.txt  report_synthesizer_system.txt  request_parser_system.txt  scanner_system.txt  trl_assessor_system.txt
